--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+    padding: 0;
+    box-sizing: border-box;;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+  background: rgb(176, 227, 217);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
+}
+.container-btn{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.main{
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titel{
+  color: #c23400;
+  margin: 50px;
+  letter-spacing: 8px;
+  font-weight: 800;
+}
+h2{
+  color: rgb(84, 84, 84);
+  text-shadow: 10px 12px 10px;
+}
+.descrip{
+  font-size: 19px;
+  width: 1100px;
+  height: 200px;
+  font-weight: 600;
+}
+.btn {
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+  background-color: #c22d00;
+  align-self: center;
+  padding: 10px;
+  margin-top: 40px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+.btn2{
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+  background-color: #c23400;
+  align-self: center;
+  padding: 40px;
+  width: 500px;
+  margin: 50px;
+  
+}
+
+button {
+  
+  border: none;
+  font-size: 18px;
+  color: #0071c2;
+  background: none;
 }
